# repdfcal

./: .gitignore  README.md  pyproject.toml
repdfcal/: __main__.py  events.py  generate.py  holidays.py
